Code Quality fixes