@@ -1,21 +1,23 @@
-package com.rupesh.assignment.MovieAPIApplication.movies;
+package com.rupesh.assignment.movieapplication.service;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
-import com.rupesh.assignment.MovieAPIApplication.exception.CustomException;
-import com.rupesh.assignment.MovieAPIApplication.utils.CategoryMapper;
-import com.rupesh.assignment.MovieAPIApplication.utils.MovieCategory;
-import com.rupesh.assignment.MovieAPIApplication.utils.MovieDataUpdater;
+import com.rupesh.assignment.movieapplication.domain.MovieDTO;
+import com.rupesh.assignment.movieapplication.domain.Movies;
+import com.rupesh.assignment.movieapplication.exception.MovieAPIException;
+import com.rupesh.assignment.movieapplication.repository.MovieRepository;
+import com.rupesh.assignment.movieapplication.utils.MovieDataUpdater;
+import com.rupesh.assignment.movieapplication.utils.OscarCategory;
+import com.rupesh.assignment.movieapplication.utils.OscarCategoryMapper;
 
 /**
  * Service for handling movie-related operations. Business logics for updating
@@ -24,19 +26,20 @@ import com.rupesh.assignment.MovieAPIApplication.utils.MovieDataUpdater;
  */
 
 @Service
-public class MovieService {
+public class MovieServiceImpl implements MovieService {
 
 	private final MovieRepository movieRepository;
 
 	private final MovieDataUpdater movieDataUpdater;
 
+	private static final String MOVIE_NOT_FOUND = "Movie not found with name: ";
+
 	@Autowired
-	public MovieService(MovieRepository movieRepository, MovieDataUpdater movieDataUpdater) {
+	public MovieServiceImpl(MovieRepository movieRepository, MovieDataUpdater movieDataUpdater) {
 		this.movieRepository = movieRepository;
 		this.movieDataUpdater = movieDataUpdater;
 	}
-	
-	private final static String MOVIE_NOT_FOUND = "Movie not found with name: ";
+
 	/**
 	 * Updates the ratings for the specified movie and the rating will be provided
 	 * by user.
@@ -44,30 +47,32 @@ public class MovieService {
 	 * @param movieName the name of the movie to update ratings for
 	 * @param newRating the new rating to be added
 	 * @return a list of updated movie details as MovieDTOs
-	 * @throws CustomException if the movie is not found or the rating is less than
+	 * @throws MovieAPIException if the movie is not found or the rating is less than
 	 *                         1
 	 */
 
-	public List<MovieDTO> updateRatingsForMovies(String movieName, double newRating) {
-		List<MovieEntity> movies = movieRepository.findAllByNominee(movieName);
-		movies.stream().findFirst().orElseThrow(() -> new CustomException(MOVIE_NOT_FOUND + movieName));
+	@Override
+	public List<MovieDTO> updateRatings(String movieName, double newRating) {
+		List<Movies> movies = movieRepository.findAllByNominee(movieName);
+		movies.stream().findFirst().orElseThrow(() -> new MovieAPIException(MOVIE_NOT_FOUND + movieName));
 		if (newRating < 1)
-			throw new CustomException("Minimum rating is 1 " + newRating);
-		for (MovieEntity movie : movies) {
-			movieDataUpdater.callExternalAPI(movieName, movie);
+			throw new MovieAPIException("Minimum rating is 1 " + newRating);
 
-			int imdbVotes = movie.getImdbVotes();
-			double totalRatingSum = (movie.getImdbRating() * imdbVotes) + newRating;
-			double newAverageRating = totalRatingSum / (imdbVotes + 1);
+		movies.forEach(movie -> {
+		    movieDataUpdater.callExternalAPI(movieName, movie);
+		    
+		    var imdbVotes = movie.getImdbVotes();
+		    var totalRatingSum = (movie.getImdbRating() * imdbVotes) + newRating;
+		    var newAverageRating = totalRatingSum / (imdbVotes + 1);
+		    var roundedAverageRating = BigDecimal.valueOf(newAverageRating).setScale(2, RoundingMode.UP).doubleValue();
+		    
+		    movie.setImdbVotes(imdbVotes + 1);
+		    movie.setImdbRating(roundedAverageRating);
+		});
 
-			double roundedAverageRating = BigDecimal.valueOf(newAverageRating).setScale(2, RoundingMode.UP)
-					.doubleValue();
-			movie.setImdbVotes(imdbVotes + 1);
-			movie.setImdbRating(roundedAverageRating);
-		}
 
-		List<MovieEntity> updatedMovies = movieRepository.saveAll(movies);
-		return updatedMovies.stream().map(this::convertToDTO).collect(Collectors.toList());
+		List<Movies> updatedMovies = movieRepository.saveAll(movies);
+		return updatedMovies.stream().map(this::convertToDTO).toList();
 
 	}
 
@@ -76,16 +81,16 @@ public class MovieService {
 	 * 
 	 * @param movieName the name of the nominee to search for
 	 * @return a list of movie details as MovieDTOs matching the nominee
-	 * @throws CustomException if no movies are found with the specified nominee
+	 * @throws MovieAPIException if no movies are found with the specified nominee
 	 */
-
+	@Override
 	public List<MovieDTO> findMoviesByNominee(String movieName) {
-		List<MovieEntity> movies = getMoviesByNominee(movieName);
+		List<Movies> movies = getMoviesByNominee(movieName);
 
 		Optional.of(movies).filter(m -> !m.isEmpty())
-				.orElseThrow(() -> new CustomException(MOVIE_NOT_FOUND+ movieName));
+				.orElseThrow(() -> new MovieAPIException(MOVIE_NOT_FOUND + movieName));
 
-		return movies.stream().map(this::convertToDTO).collect(Collectors.toList());
+		return movies.stream().map(this::convertToDTO).toList();
 	}
 
 	/**
@@ -99,13 +104,13 @@ public class MovieService {
 	 *         This logic is handled here in this method.
 	 */
 
-	private List<MovieEntity> getMoviesByNominee(String movieName) {
+	private List<Movies> getMoviesByNominee(String movieName) {
 		// First, attempt to find the category based on the movie name
-		Optional<MovieEntity> movieOptional = movieRepository.findFirstByNominee(movieName);
+		Optional<Movies> movieOptional = movieRepository.findFirstByNominee(movieName);
 		if (movieOptional.isPresent()) {
-			MovieEntity movie = movieOptional.get();
-			MovieCategory category = CategoryMapper.getCategory(movie.getCategory());
-			if (category == MovieCategory.ACTORS) {
+			Movies movie = movieOptional.get();
+			OscarCategory category = OscarCategoryMapper.getCategory(movie.getCategory());
+			if (category == OscarCategory.ACTORS) {
 				return movieRepository.findAllByAdditionalInfo(movieDataUpdater.modifyMovieName(movieName));
 			} else {
 				return movieRepository.findAllByNominee(movieDataUpdater.modifyMovieName(movieName));
@@ -114,9 +119,9 @@ public class MovieService {
 		// If not found in nominee, try finding in additional info
 		movieOptional = movieRepository.findFirstByAdditionalInfo(movieName);
 		if (movieOptional.isPresent()) {
-			MovieEntity movie = movieOptional.get();
-			MovieCategory category = CategoryMapper.getCategory(movie.getCategory());
-			if (category == MovieCategory.ACTORS) {
+			Movies movie = movieOptional.get();
+			OscarCategory category = OscarCategoryMapper.getCategory(movie.getCategory());
+			if (category == OscarCategory.ACTORS) {
 				return movieRepository.findAllByAdditionalInfo(movieDataUpdater.modifyMovieName(movieName));
 			} else {
 				return movieRepository.findAllByNominee(movieDataUpdater.modifyMovieName(movieName));
@@ -133,15 +138,16 @@ public class MovieService {
 	 * @return a statement indicating whether the nominee has won Best Picture
 	 * @throws ResourceNotFoundException if the movie is not found
 	 */
-
-	public String getBestPictureWinnerStatement(String nominee) {
-		Optional<MovieEntity> movie = movieRepository.findByNomineeAndCategoryAndOscarWinner(nominee, "Best Picture",
+	@Override
+	public String hastheMovieWonOscars(String nominee) {
+		Optional<Movies> movie = movieRepository.findByNomineeAndCategoryAndOscarWinner(nominee, "Best Picture",
 				true);
 
-		if (movie.isPresent()) 
+		if (movie.isPresent())
 			return nominee + " has won the Best Picture!";
-		 else {
-			movieRepository.findFirstByNominee(nominee).orElseThrow(() -> new CustomException(MOVIE_NOT_FOUND+ nominee));
+		else {
+			movieRepository.findFirstByNominee(nominee)
+					.orElseThrow(() -> new MovieAPIException(MOVIE_NOT_FOUND + nominee));
 			return nominee + " has not won the Best Picture.";
 		}
 	}
@@ -151,8 +157,8 @@ public class MovieService {
 	 * 
 	 * @return a list of MovieEntity of movies.
 	 */
-
-	public List<MovieEntity> getTop10() {
+	@Override
+	public List<Movies> getTop10() {
 		Pageable pageable = PageRequest.of(0, 10);
 		return movieRepository.findtop10RatedMovies(pageable);
 	}
@@ -163,7 +169,7 @@ public class MovieService {
 	 * @param movieEntity class MovieEntity
 	 * @return MovieDTO object
 	 */
-	private MovieDTO convertToDTO(MovieEntity movieEntity) {
+	private MovieDTO convertToDTO(Movies movieEntity) {
 		MovieDTO movieDTO = new MovieDTO();
 		movieDTO.setId(movieEntity.getId());
 		movieDTO.setAdditionalInfo(movieEntity.getAdditionalInfo());
